# shepherd-file-explorer

./: .gitignore  CMakeLists.txt  Makefile  README.md  files_windows.c  install.sh  main.c  menu.c  system.h  temp.txt
include/: command.h  copy.h  delete.h  entry.h  file_struct.h  files.h  files_linux.h  files_windows.h  gui.h  linked_list.h  linux_utlis.h  menu.h  move.h  open_window.h  runtime.h  state.h  syslog_wrapper.h  system.h  terminal_colors.h  terminal_menu.h
src/: entry.h  files_windows.c  files_windows.h  main.c  menu.c  menu.h
src/common/: files.c  gui.c  linked_list.c  main.c  runtime.c  terminal_menu.c
src/linux/: files_linux.c  linux_utils.c  syslog_linux.c  terminal_menu_linux.c  window_linux.c
src/windows/: copy_windows.c  files_windows.c  terminal_menu_windows.c  window_windows.c
